Update SDK version