@@ -9,12 +9,12 @@
     <description>address-manager - Integration Tests</description>
 
     <artifactId>address-manager-integration-tests</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
 
     <parent>
         <groupId>com.sap.cloud.s4hana.examples</groupId>
         <artifactId>address-manager</artifactId>
-        <version>1.0</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -25,7 +25,6 @@
         <surefire.groups/>
         <surefire.excludedGroups/>
         <surefire.maxMemorySize>1024m</surefire.maxMemorySize>
-        <surefire.maxPermSize>512m</surefire.maxPermSize>
         <surefire.logLevel>info</surefire.logLevel>
 
         <jacoco.destFile>${project.build.directory}/coverage-reports/jacoco.exec</jacoco.destFile>
@@ -37,7 +36,7 @@
             <groupId>com.sap.cloud.s4hana.examples</groupId>
             <artifactId>address-manager-application</artifactId>
             <classifier>classes</classifier>
-            <version>1.0</version>
+            <version>1.0-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>ch.qos.logback</groupId>
@@ -133,7 +132,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.9</version>
+                <version>0.8.1</version>
                 <configuration>
                     <destFile>${jacoco.destFile}</destFile>
                     <dataFile>${jacoco.destFile}</dataFile>
@@ -161,11 +160,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20</version>
+                <version>2.19.1</version>
                 <configuration>
                     <argLine>@{argLine}
                         -Xmx${surefire.maxMemorySize}
-                        -XX:MaxPermSize=${surefire.maxPermSize}
                         -Dorg.slf4j.simpleLogger.defaultLogLevel=${surefire.logLevel}
                         -Djava.io.tmpdir=target/arquillian-working-dir/${surefire.forkNumber}/
                     </argLine>
